Fixing a few bugs.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ service_account.json
 token.json
 
 # Local log files used in case of error to log to Google Drive
-.*csv
+*.csv
 
 # Recordings of the camera module
 camera-records/*.h264
